[package]
name = "doxygen_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx-rs = "0.4.6"
encoding = "0.2.33"
iced = "0.8.0"
iced_native = "0.9.1"
once_cell = "1.17.1"
rayon = "1.7.0"
regex = "1.7.3"
rfd = "0.11.3"
